[B]1.1.72[/B]
Added color presets
Fixed issues with now playing widget
Fixed aspect ratio for some icons
Changed home menu icon size
Added option to show info for a few seconds, when video starts
Improvements to dialog subtitles

[B]1.1.71[/B]
Added option to hide ratings in list views
CjK font added (!thx kuroehanako)
Added support for extended pvr artwork (!thx kalle2000)
Minor adjustments
Language updates

[B]1.1.70[/B]
Improved fsk ratings (!thx Peiren85)
Fixed issues
Minor adjustments

[B]1.1.69[/B]
Minor adjustments
Code cleanup

[B]1.1.68[/B]
Improved skin shortcuts implementation
Improved widget info for episodes
Fixed issues
Code cleanup

[B]1.1.67[/B]
Improved skin performance
Added option for always visible controls in extended now playing info
Fixed issues
Code improvements, cleanup

[B]1.1.66[/B]
Improved extended now playing info
Minor adjustments to furniture icons

[B]1.1.65[/B]
Improved overall experience
Improved star rating
Added support for animated artwork module (!thx PvD)
Improved textbox autoscroll function (!thx manfeed)
Fixed issues
Code improvements, cleanup

[B]1.1.64[/B]
Improved extended now playing info
Improved auto playing trailers
Added just watch icon
Fixed issue with jumpbar
Improved overall experience
Improved textures, cleanup
Improved code, cleanup
Added lower percentage values for netflix window

[B]1.1.63[/B]
Improved animations
Improved extended now playing
Improved OSD code
Improved overall experience
Fixed issues

[B]1.1.62[/B]
Fixed issues with clearlogo and pvr osd
Added option for is playing indicator
Added option to use embuary helper for blur
Improved view 520
Minor adjustments

[B]1.1.61[/B]
Improved container types
Improved widget information for episodes
Added indicators to featured home menu layout
Added additional music flags
Code improvements, cleanup

[B]1.1.60[/B]
Improved overall experience
Fixed issues
Added EDL markers
Improved code, cleanup
Added option to ignore embedded fanart by addons (!thx Nanomani)
