@@ -1,3 +1,8 @@
+[B]2.0.0[/B]
+Removed color picker addon support
+Added color picker dialog support
+Added new hdr type infolabels
+
 [B]1.1.72[/B]
 Added color presets
 Fixed issues with now playing widget
